# olmec

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-build.yml  fly-deploy.yml
data/content/: canned.yaml  questions.yaml  responses.yaml  wandering.yaml
docs/: deployment.md
hardware/: olmec.service  setup.md
pipeline/: apply_effects.py  generate_audio.py  seed_db.py
src/olmec/: __init__.py  config.py  events.py  main.py  state_machine.py
src/olmec/api/: routes.py  ws.py
src/olmec/audio/: devices.py  engine.py
src/olmec/led/: driver.py
src/olmec/questions/: db.py  models.py
src/olmec/stt/: engine.py  judge.py
ui/combined/: app.js  index.html  style.css
ui/operator/: app.js  index.html  style.css
ui/twin/: index.html  olmec.js  style.css
